<resources>

    <string name="app_name">TipCalculator</string>

    <string name="bill_total">Bill Total</string>

    <string name="empty_string"></string>

    <string name="ten_percent">10%</string>

    <string name="fifteen_percent">15%</string>

    <string name="twenty_percent">20%</string>

    <string name="tip">tip</string>

    <string name="total">Total</string>

    <string name="custom">Custom</string>

    <string name="eighteen_percent">18%</string>

</resources>
